--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
 ---
 layout: default
-title: Luciano Strika (@StrikingLoo)'s Personal Website
+title: SGWiki
 ---
 <div class="blurb">
 	
-	<h1>Hi there, I'm Luciano</h1>
-	<div style = 'font-size:1.5em'>
-	<p>I'm a Software Developer with a degree in Computer Science.</p>
-	<ul>
-		<li><a href="/wiki">📚 Personal Wiki</a> for my notes and most of this site's content.</li>
-		<li><a href="/wiki/navigation-guide">🧭 Index</a> to see a table of contents.</li>
-		<li><a href="/blog">🛖 Blog</a> Still a Work in Progress.</li>
-		<li><a href="/about">🏝️ About</a> To learn more about me.</li>
-	</ul>
-	<p>You can read about my experiences with Machine Learning, Statistics and Programming on my <a href='http://www.medium.com/@strikingloo'>Medium</a>.</p>
-
-	<p> Or you could just chill here and contact me through any of these channels. </p> </div>
+	<h1>Hi there, I'm Sam</h1>
+	
 </div><!-- /.blurb -->
-<a class="h-card" rel="me" href="https://strikingloo.github.io" style="display:none">Luciano Strika
-<p class="p-note">I'm a Software Developer with a degree in Computer Science. Polyglot, Geek, Weeb and happy.</p>
-</a>
