--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ title: Sam's Personal Website
 		<li><a href="/blog">🛖 Blog</a> Still a Work in Progress.</li>
 		<li><a href="/about">🏝️ About</a> To learn more about me.</li>
 	</ul>
-	<p>You can read about my experiences with Machine Learning, Statistics and Programming on my <a href='http://www.medium.com/@strikingloo'>Medium</a>.</p>
+	<p>Hello world.</p>
 
 	<p> Or you could just chill here and contact me through any of these channels. </p> </div>
