--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@ title: Sam's Personal Website
 	</ul>
 	<p>Hello world.</p>
 
-	<p> Or you could just chill here and contact me through any of these channels. </p> </div>
+	<p> Thanks for checking out my site! </p> </div>
