--- a/about/index.html
+++ b/about/index.html
@@ -4,19 +4,9 @@ title: About Me
 ---
         <h1>About Me</h1>
 	<p>
-	I'm Luciano Strika, a Computer Scientist, Data Scientist and complete geek.
+	I'm Sam!
 	</p><p>
-	I spend my time reading Machine Learning papers or books, programming, and studying Japanese. 
-	I used to post Machine Learning tutorials in my <a href='https://medium.com/@strikingLoo'>previous blog</a>.
+	I'm a voracious reader, blues and jazz drummer, and medical device Product Manager. 
 
-	In my free time I also watch industrial amounts of anime and manga, and love reading books (both fiction and non-fiction).
-
-	</p><p>
-	I felt like I didn't have enough experience in the whole web development side of things, and wanted to try out something like this. I also wanted one of these cute GitHub websites every developer seems to be getting.
-
-	</p><p>
-	So I made this site. I haven't written a lot in the blog yet, but I keep a pretty neat <a href="/wiki">Digital Garden</a> with evergreen notes, that also doubles as my personal wiki and paper notes repository. Give it a look!
-
-	</p><p>
-	Feel free to hit me up in any of the media linked below. We can have a chat, iterate your world domination plans, or maybe exchange memes. Your call.
-	</p>
+	This wiki will serve as home to my various tangents of thought.
+		
