--- a/about/index.html
+++ b/about/index.html
@@ -10,3 +10,4 @@ title: About Me
 
 	This wiki will serve as home to my various tangents of thought.
 		
+	Thanks to StrikingLoo for inspiration and help creating this.
