--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@ title: Sam's Personal Website
 	<h1>Hi there, I'm Sam</h1>
 	<div style = 'font-size:1.5em'>
 	<ul>
-		<li><a href="/wiki">📚 Personal Wiki</a> for my notes and most of this site's content.</li>
+		<li><a href="/wiki">📚 Personal Wiki</a> for my notes. This is how I organize my brain.</li>
 		<li><a href="/wiki/navigation-guide">🧭 Index</a> to see a table of contents.</li>
-		<li><a href="/blog">🛖 Blog</a> Still a Work in Progress.</li>
-		<li><a href="/about">🏝️ About</a> To learn more about me.</li>
+		<li><a href="/blog">🛖 Blog</a></li>
+		<li><a href="/about">🏝️ About</a></li>
 	</ul>
-	<p>Hello world.</p>
+	<p>I see this site as my organized journal that can be accessed from anywhere.</p>
 
 	<p> Thanks for checking out my site! </p> </div>
 </div><!-- /.blurb -->
