--- a/wiki/index.html
+++ b/wiki/index.html
@@ -7,7 +7,7 @@ title: Personal Wiki / Digital Garden
 
    <blockquote>
    <p>
-   "It's days like these that I curse the Chinese for inventing gunpowder." <br/>-- Nathan Fielder
+   "If you have a garden and a library, you have everything you need." <br/>-- Cicero
 </p></blockquote>
 
 <p>This is my Personal Wiki. 
