--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Sam's Personal Website
 	<div style = 'font-size:1.5em'>
 	<ul>
 		<li><a href="/wiki">📚 Personal Wiki</a> for my notes. This is how I organize my brain.</li>
-		<li><a href="/wiki/navigation-guide">🧭 Index</a> to see a table of contents.</li>
+		<li><a href="/MCAT-materials">🧭 MCAT Stuff!
 		<li><a href="/blog">🛖 Blog</a></li>
 		<li><a href="/about">🏝️ About</a></li>
 	</ul>
